deployments/forgerock-ingress/overlays/https/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgerock-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/certificate-arn: $(certArn)
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
spec:
  rules:
    - http:
        paths:
        - backend:
            service:
              name: ingress-nginx-controller
              port:
                number: 443
          path: /*
          pathType: ImplementationSpecific
